--- a/styles/Layout/Nav/Nav.module.css
+++ b/styles/Layout/Nav/Nav.module.css
@@ -1,5 +1,8 @@
 .nav{
+    padding: 10px;
+    width: fit-content;
     background-color: blue;
     display: flex;
     justify-content: space-around;
+    flex-direction: column;
 }
